--- a/PybTech - Landing/PybTech.html.html
+++ b/PybTech - Landing/PybTech.html.html
@@ -66,21 +66,22 @@
 <section id="services">
     <h2>Serviços</h2>
     <ul>
-        <li>Autorizações de Procedimentos Clínicos e Médicos.</li>
-        <li>Fechamento de Produções</li>
-        <li>Analise e Recurso de Glosas</li>
-        <li>Serviço Remoto</li>
-        <li>Suporte Tecnico</li>
+        <li>Autorizações de procedimentos</li>
+        <li>Fechamento de prododução realizada</li>
+        <li>Analise, auditoria e recurso de glosa</li>
+        <li>Serviço remoto e presencial</li>
+        <li>Suporte tecnico</li>
     </ul>
 </section>
 
 <section id="team">
     <h2>Equipe</h2>
-    <p>Conheça nossos profissionais altamente qualificados:</p>
+    <p>Conheça nossos serviços qualificados:</p>
     <ul>
         <li>Faturista Clínico</li>
         <li>Faturista Hospitalar</li>
         <li>Analista de Faturamento</li>
+        <li>Auditoria</li>
         <li>Suporte</li>
     </ul>
 </section>
@@ -88,7 +89,7 @@
 <section id="contact">
     <h2>Contato</h2>
     <p>Entre em contato conosco para agendar seu orçamento ou para mais informações:</p>
-    <p>yonbisakau7@gmail.com</p>
+    <p>faturamentopyb@gmail.com</p>
     <p>Telefone: (61) 9.9397-3879</p>
     <p>Endereço: Brasília - DF</p>
 </section>
